# gost-ts-analyzer

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  start_app.bat
backend/: __init__.py
backend/app/: document_unifier.py  docx_extraction.py  main.py  pdf_extraction.py  structure_builder.py  structure_detector.py  structure_enricher.py  text_normalizer.py
docs/: progress.md  project_spec.txt
static/css/: main.css
static/js/: upload.js
templates/: index.html
tests/: test_acceptance_criteria_check.py  test_appendix_references_check.py  test_check_findings_surface.py  test_common_rules_glossary.py  test_common_rules_vague_phrases.py  test_document_unifier.py  test_docx_extraction.py  test_docx_report_export.py  test_duplicate_formulations_check.py  test_figure_references_check.py  test_functional_requirements_check.py  test_health.py  test_issue_model.py  test_issues_builder.py  test_measurement_units_check.py  test_nonfunctional_requirements_check.py  test_numerical_characteristics_check.py  test_pdf_extraction.py  test_purpose_check.py  test_recommendations.py  test_report_builder.py  test_required_sections_check.py  test_scope_check.py  test_section_order_check.py  test_section_rules_template.py  test_structure_builder.py  test_structure_completeness_check.py  test_structure_detector.py  test_structure_enricher.py  test_table_references_check.py  test_terminology_consistency_check.py  test_text_normalizer.py  test_unverifiable_requirements_check.py  test_upload_error_ui_contract.py  test_vague_wording_check.py
(+36 files in other folders)
